# DigitalLibrary

./: CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Client/include/: M_Book.h  M_User.h  User.h  dllecport.hpp
Client/src/: M_Book.cpp  M_User.cpp  User.cpp
Client/test_client/: CMakeLists.txt
Server/: CMakeLists.txt  main.cpp
Server/include/: M_Book.h  M_User.h
Server/src/: M_Book.cpp  M_User.cpp
